--- a/main.css
+++ b/main.css
@@ -5,16 +5,34 @@
 
 #image-list {
     display: inline-block;
+    width: 500px;
 }
 
 #image-list li {
     float: left;
     border: 1px solid black;
     width: 150px;
-    height: 200px;
+    height: 225px;
     list-style: none;
+    margin: 3px;
 }
 
 #image-list img {
     width: 100%;
+}
+
+.narwhal {
+    background: lightblue;
+}
+
+.unicorn {
+    background: pink;
+}
+
+.rhino {
+    background: mediumaquamarine;
+}
+
+.mouflon {
+    background: lightcoral
 }
