--- a/main.css
+++ b/main.css
@@ -4,16 +4,19 @@
 }
 
 #image-list {
-    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0px;
 }
 
 #image-list li {
-    display: inline-block;
+    list-style-type: none;
     border: 1px solid black;
-    height: 150px;
-    width: 100px;
-    margin-right: 5px;
-    margin-top: 5px;
+    height: 200px;
+    width: 120px;
+    margin: 5px;
 }
 
 #image-list img {
