functionality is working, using grid and flexbox to style

--- a/main.css
+++ b/main.css
@@ -14,11 +14,24 @@
 #image-list li {
     list-style-type: none;
     border: 1px solid black;
-    height: 200px;
+    height: 220px;
     width: 120px;
     margin: 5px;
+    display: grid;
+    grid-template-rows: 30% 70%;
 }
 
 #image-list img {
     width: 100%;
+}
+
+#title {
+    display: flex;
+    justify-content: center;
+}
+
+#imgage {
+    display: flex;
+    align-items: center;
+    grid-row-start: 2;
 }
