--- a/main.css
+++ b/main.css
@@ -2,17 +2,23 @@
 #image-list {
     display: flex;
     flex-wrap: wrap;
-    width: 900px;
+    width: auto;
     list-style: none;
     justify-content: space-around;
 }
 
 #image-list li {
-    width: 200px;
+    width: 150px;
     border: 2px solid black;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 #image-list img {
    width: 100%;
+}
+
+#image-list h2 {
+   font-size: 18px;
+   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
