--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+    text-align: center;
+}
+
 #image-list {
     text-align: center;
     display: flex;
@@ -10,8 +18,8 @@
 #image-list li {
     list-style: none;
     width: 200px;
+    height: 375px;
     margin: 10px;
-    border: 1px solid black;
 }
 
 #image-list img {
