--- a/main.css
+++ b/main.css
@@ -1,13 +1,16 @@
-#image-gallery {
+#image-gallery li {
     color:green;
     width:200px;
+    height:400px;
     border: 1px solid red;
     list-style: none;
     padding:0;
     text-align:center;
     margin:8px;
+    display:inline-block;
 }
 
 #image-gallery img{
 width:100%;
+height:200px;
 }
