--- a/src/main.css
+++ b/src/main.css
@@ -1,9 +1,10 @@
 li {
     list-style: none;
-    height: 300px;
+    height: 350px;
     width: 200px;
     border: 1px solid black;
     padding: 5px;
+    float: left;
     display: inline-block;
 }
 
